# ai-for-developers-project-386

./: .dockerignore  .release-please-manifest.json  AGENTS.md  Dockerfile  README.md  release-please-config.json
.github/workflows/: release-please.yml  tests.yml
backend/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
backend/src/app/: config.py  main.py
backend/src/app/api/: admin.py  dependencies.py  guest.py  router.py
backend/src/app/schemas/: auth.py  availability.py  base.py  bookings.py  dev_emails.py  errors.py  event_types.py
backend/src/app/services/: auth_service.py  availability_service.py  booking_service.py  calendar_service.py  dev_email_service.py  email_service.py  event_type_service.py  time_service.py
backend/src/app/storage/: database.py  models.py  repositories.py
backend/tests/: conftest.py  test_admin_bookings.py  test_api.py  test_booking_rules.py  test_not_found.py  test_snapshots.py  test_validation_edges.py
docs/: backend-architecture.md  backend-stack.md  frontend-architecture.md  frontend-stack.md  product-spec.md  product.md  test-cases.md
frontend/: .env.example  .gitignore  CHANGELOG.md  README.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/e2e/: meeting-booking.e2e.spec.ts
frontend/src/: main.tsx  styles.css
frontend/src/app/: app.tsx  providers.tsx  router.tsx
frontend/src/features/auth/: queries.ts  schemas.ts
frontend/src/features/availability/: queries.ts  schemas.ts
typespec/: main.tsp
(+29 files in other folders)
