[project]
name = "meeting-booking-backend"
version = "0.2.0"
description = "FastAPI backend for the meeting booking MVP"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.0.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
